fix(button): update spacing of button with icon
see https://github.com/telerik/kendo-angular-buttons/issues/199

--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -58,8 +58,7 @@
             .k-icon,
             .k-image,
             .k-sprite {
-                margin: 0 ($button-padding-x / 2) 0 (-$button-padding-x / 2);
-
+                margin: 0 (3 * $button-padding-x / 2) 0 (-$button-padding-x / 4);
             }
 
             .k-rtl &,
@@ -67,7 +66,7 @@
                 .k-icon,
                 .k-image,
                 .k-sprite {
-                    margin: 0 (-$button-padding-x / 2) 0 ($button-padding-x / 2);
+                    margin: 0 (-$button-padding-x / 4) 0 (3 * $button-padding-x / 2);
                 }
             }
         }
